# Zombie-Keeper

./: .gitignore  CLAUDE.md  HELP.md  MONOREPO.md  README.md  ZombieKeeper.sh  launcher.py  pom.xml  start.sh
ZombieKeeper-Api/: .env.example  pom.xml
ZombieKeeper-Arsenal/: .gitignore  CMakeLists.txt  Makefile  README.md
ZombieKeeper-Arsenal/agents/: README.md
ZombieKeeper-Arsenal/agents/attacks/network/dos/: CMakeLists.txt
ZombieKeeper-Arsenal/agents/attacks/network/dos/include/: DOS.h
ZombieKeeper-Arsenal/agents/attacks/network/dos/src/: DOS.cpp
ZombieKeeper-Arsenal/cpp/LocalFingerPrint/: Makefile
ZombieKeeper-Arsenal/cpp/LocalFingerPrint/localNetwork/scanners/: Scanner.cpp
ZombieKeeper-Arsenal/libs/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/D_DOS/: CMakeLists.txt  DOS.cpp
ZombieKeeper-Arsenal/libs/cpp/D_DOS/h/: DOS.h
ZombieKeeper-Arsenal/libs/cpp/D_DOS/src/: DOS.cpp
ZombieKeeper-Arsenal/libs/cpp/net_utils/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/net_utils/checksum/include/net_utils/: checksum.h
ZombieKeeper-Arsenal/libs/cpp/net_utils/checksum/src/: checksum.cpp
ZombieKeeper-Arsenal/libs/cpp/net_utils/ping/src/: Ping.cpp
ZombieKeeper-Arsenal/libs/cpp/output_utils/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/output_utils/include/: JsonSerializer.h  ZKOutput.h
ZombieKeeper-Arsenal/libs/cpp/output_utils/src/: JsonSerializer.cpp  ZKOutput.cpp
ZombieKeeper-Arsenal/libs/cpp/ping/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/ping/include/: Ping.h
ZombieKeeper-Arsenal/libs/cpp/utils/network_utils/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/utils/network_utils/D_DOS/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/utils/network_utils/ping/: CMakeLists.txt
ZombieKeeper-Arsenal/libs/cpp/utils/output_utils/include/: ZKOutput.h
ZombieKeeper-Arsenal/libs/cpp/utils/output_utils/src/: ZKOutput.cpp
ZombieKeeper-Arsenal/network-session/: CMakeLists.txt  README.md
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/: README.md
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/cpp/: CMakeLists.txt  Makefile
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/cpp/localNetwork/: FingerPrintSession.cpp
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/cpp/localNetwork/app/: main.cpp
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/cpp/localNetwork/model/h/: Port.h
ZombieKeeper-Arsenal/network-session/scanners/local-fingerprint/cpp/localNetwork/scanners/h/: Scanner.h
ZombieKeeper-Arsenal/network-session/tools/local-fingerprint/: CMakeLists.txt
ZombieKeeper-Arsenal/network-session/tools/local-fingerprint/include/: App.h  FingerprintSession.h  Scanner.h  SessionBuild.h
ZombieKeeper-Arsenal/network-session/tools/local-fingerprint/include/model/: Node.h  Port.h  Session.h  Vulnerability.h
ZombieKeeper-Arsenal/network-session/tools/local-fingerprint/src/: App.cpp  FingerprintSession.cpp  Scanner.cpp  SessionBuild.cpp  main.cpp
ZombieKeeper-Arsenal/network-session/tools/local-fingerprint/src/model/: Node.cpp  Port.cpp  Session.cpp  Vulnerability.cpp
ZombieKeeper-Arsenal/python/LocalFingerPrint/requestAutomation/: request.py
ZombieKeeper-Arsenal/scripts/: build-agents.sh  build-all.sh  build-network-session.sh  clean-all.sh
ZombieKeeper-Automations/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ZombieKeeper-Automations/automations/: __init__.py
ZombieKeeper-Automations/automations/agents/: __init__.py
ZombieKeeper-Automations/automations/network/: __init__.py  recon_request.py
ZombieKeeper-Automations/automations/payloads/: __init__.py
ZombieKeeper-Automations/automations/reports/: __init__.py
ZombieKeeper-Automations/core/: __init__.py
ZombieKeeper-Automations/tests/: __init__.py
ZombieKeeper-Client/: .gitignore  BACKEND_CHANGES.md  SECURITY_UPGRADE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ZombieKeeper-Client/src/: Root.tsx  main.tsx
ZombieKeeper-Client/src-tauri/: Cargo.toml  tauri.conf.json
ZombieKeeper-Client/src-tauri/icons/: icon.icns
ZombieKeeper-Client/src-tauri/src/: main.rs
ZombieKeeper-Client/src/components/agents/: AgentShell.tsx  AgentTableHeader.tsx  AgentsView.tsx  ProcessesView.tsx
ZombieKeeper-Client/src/components/arsenal/: ArsenalView.tsx  ExploitsView.tsx  FileManagerView.tsx  ImplantsView.tsx  PlaybooksView.tsx  TunnelsView.tsx
ZombieKeeper-Client/src/components/c2/: ClipboardView.tsx  TimelineView.tsx
ZombieKeeper-Client/src/components/dashboard/: DashboardView.tsx  WorldMap.tsx
ZombieKeeper-Client/src/components/intelligence/: CredentialsView.tsx  LootView.tsx  ReportsView.tsx
ZombieKeeper-Client/src/components/layout/: App.tsx  LoginPage.tsx  Menubar.tsx  Sidebar.tsx
ZombieKeeper-Client/src/components/listeners/: ListenersView.tsx
ZombieKeeper-Client/src/components/network/: NetworkScannerView.tsx  NetworkView.tsx
ZombieKeeper-Client/src/components/operations/: MitreView.tsx  OperationsView.tsx  SweepView.tsx
ZombieKeeper-Client/src/components/opsec/: OpsecView.tsx
ZombieKeeper-Client/src/components/payloads/: PayloadGenerator.tsx
ZombieKeeper-Client/src/components/scanner/: ScannerView.tsx
ZombieKeeper-Client/src/components/shared/: SettingsView.tsx
ZombieKeeper-Client/src/components/shell/: ShellModule.tsx
ZombieKeeper-Client/src/components/users/: UsersView.tsx
ZombieKeeper-Client/src/lib/client/: api.ts
ZombieKeeper-Client/src/styles/: globals.css
ZombieKeeper-Web/: package.json
ZombieKeeper-Web/src/app/: layout.tsx  page.tsx
ZombieKeeper-Web/src/components/agents/: AgentShell.tsx  AgentTableHeader.tsx  AgentsView.tsx
ZombieKeeper-Web/src/components/dashboard/: DashboardView.tsx  WorldMap.tsx
ZombieKeeper-Web/src/components/intelligence/: CredentialsView.tsx  LootView.tsx  ReportsView.tsx
ZombieKeeper-Web/src/components/layout/: App.tsx  LoginPage.tsx  Menubar.tsx  (+1 more)
ZombieKeeper-Web/src/lib/: api.ts  data.ts
ZombieKeeper-Web/src/styles/: globals.css
(+138 files in other folders)
